--- a/public_html/layouts/Default/skins/basic/layout/_Header.scss
+++ b/public_html/layouts/Default/skins/basic/layout/_Header.scss
@@ -4,7 +4,7 @@
   .leftHeader {
     background-color: #969696;
     color: #fff;
-    height: 50px;
+    height: $h-header;
   }
 
   .rightHeader {
@@ -23,8 +23,8 @@
   background: #4a5364;
   right: 0;
   top: 0;
-  left: 50px;
-  z-index: 1200;
+  left: $w-menu-mini-state;
+  z-index: $z-index-header;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -54,15 +54,6 @@
         font-size: 18px;
       }
     }
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .bodyHeader {
-    .leftSide {
-      width: auto;
-    }
-    left: 0px;
   }
 }
 
@@ -110,7 +101,7 @@
 
 .actionMenu {
   position: fixed;
-  top: 50px;
+  top: $h-header;
   right: 0px;
   z-index: 1500;
   background: #fff;
@@ -140,7 +131,7 @@
   .commonActionsButtonDropDown,
   .historyList {
     position: fixed;
-    top: 50px;
+    top: $h-header;
     left: 5px;
     right: 5px;
     bottom: 17px;
@@ -153,7 +144,7 @@
 
 .searchMenu {
   position: fixed;
-  top: 50px;
+  top: $h-header;
   right: -300px;
   z-index: 1500;
   background: #fff;
@@ -188,4 +179,18 @@
 
 .c-main-container {
   padding: 0;
+}
+.c-header__btn--sidebar {
+  display: none;
+}
+@media only screen and (max-width: 768px) {
+  .bodyHeader {
+    .leftSide {
+      width: auto;
+    }
+    left: 0px;
+  }
+  .c-header__btn--sidebar {
+    display: inline-block;
+  }
 }
