--- a/public_html/layouts/Default/skins/basic/layout/_Menu.scss
+++ b/public_html/layouts/Default/skins/basic/layout/_Menu.scss
@@ -26,34 +26,6 @@
   vertical-align: middle;
   line-height: 18px;
 }
-@media only screen and (max-width: 768px) {
-  .c-menu__header-logo {
-    width: 17% !important;
-  }
-  .c-menu__header-user {
-    width: 73%;
-    font-size: 14px;
-    padding: 5px;
-    padding-left: 17px;
-  }
-  .rightHeaderBtnMenu {
-    display: block !important;
-  }
-  .c-menu-mobile {
-    .c-menu__container:hover + .mainBody {
-      left: 200px !important;
-    }
-    &__content.mainBody {
-      left: 200px !important;
-      &:hover {
-        left: 200px !important;
-      }
-    }
-    .bodyHeader {
-      left: 200px !important;
-    }
-  }
-}
 
 .c-menu {
   &__container {
@@ -61,9 +33,9 @@
     left: 0;
     top: 0;
     bottom: $h-footer;
-    width: 230px;
+    width: $w-menu;
     color: #f8f9fa;
-    z-index: 900;
+    z-index: $z-index-body;
     background: #4a5364;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -82,11 +54,11 @@
     }
 
     &:hover {
-      + .mainBody {
-        left: 180px !important;
-        .bodyHeader {
-          left: 230px;
-        }
+      ~ .mainBody {
+        left: calc(#{$w-menu} - #{$w-menu-mini-state});
+      }
+      ~ .bodyHeader {
+        transform: translate(calc(#{$w-menu} - #{$w-menu-mini-state}));
       }
     }
   }
@@ -158,7 +130,7 @@
     }
   }
   &__body {
-    height: calc(100% - 50px);
+    height: calc(100% - #{$h-header});
     width: 100%;
     position: relative;
   }
@@ -217,5 +189,28 @@ a {
 @media only screen and (max-width: 768px) {
   .c-menu__container {
     bottom: $h-footer-mini;
+  }
+  .c-menu__header-logo {
+    width: 17%;
+  }
+  .c-menu__header-user {
+    width: 73%;
+    font-size: 14px;
+    padding: 5px;
+    padding-left: 17px;
+  }
+  .c-menu-mobile {
+    .c-menu__container:hover + .mainBody {
+      left: $w-menu-mobile;
+    }
+    &__content.mainBody {
+      left: $w-menu-mobile;
+      &:hover {
+        left: $w-menu-mobile;
+      }
+    }
+    .bodyHeader {
+      transform: translate($w-menu-mobile);
+    }
   }
 }
